# emis-k8s

./: .env-example  .gitignore  Makefile  README.md  RELEASE.md
.github/workflows/: release.yaml
.run/: api.run.xml  frontend (run).run.xml  services_compose.yaml.api_ Compose Deployment.run.xml  services_compose.yaml.db_ Compose Deployment.run.xml  services_compose.yaml.graphdb_ Compose Deployment.run.xml  services_compose.yaml_ Compose Deployment.run.xml
bos/: Chart.yaml  README.md  values.yaml
bos/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
bos/templates/tests/: test-connection.yaml
services/: README.md  compose.yaml
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/api/: dependencies.py  main.py  metadata.py  utils_report.py
services/api/src/api/db/: database.py  models.py  schemas.py
services/api/src/api/routers/: data.py  metadata.py  report.py  user.py
services/api/src/api/utils/: utils_report.py
services/api/templates/: base.html  diagnostic.html
services/docs/: Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
services/docs/docs/: index.md
services/docs/docs/services/: index.md
services/frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
services/frontend/src/: App.tsx  App.vue
services/frontend/src/components/: HelloWorld.vue  TheWelcome.vue
services/frontend/src/router/: index.ts
services/frontend/src/views/: AboutView.vue  ExploreView.vue  chartConfig.ts
services/graphdb/: README.md  graphdb-repo.ttl
services/graphdb/graphdb-data/data/: settings.js  users.js
services/graphdb/graphdb-data/work/: runtime.properties
services/homepage/: bookmarks.yaml  services.yaml  settings.yaml  widgets.yaml
services/homepage/config/: service.yaml  settings.yaml
services/postgres/: README.md  class.csv  init.sql  meter.csv  quantity.csv  relationship.csv  sensors.csv  unit.csv
services/postgres/import/: data.csv
(+30 files in other folders)
