[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["RobertoChiosa <roberto.chiosa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
starlette = "^0.37.2"
sqlalchemy = "^2.0.31"
fpdf2 = "^2.7.9"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
python-docx = "^1.1.2"
fpdf = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
