[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["RobertoChiosa <roberto.chiosa@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
